Fix preview margin

--- a/src/App.scss
+++ b/src/App.scss
@@ -38,8 +38,7 @@ header {
 
 .preview-container {
   grid-area: p;
-  margin-top: 50px;
-  margin-right: 50px;
+  margin: 50px 50px 50px 0;
 }
 
 .title {
